[metadata]
name = geniusdotpy
version = 0.9.0
description = Python wrapper for Genius API
authors = ["jjoeldaniel <joeldanielrico@gmail.com>"]
readme = README.md
readme_content_type = "text/markdown"
license = MIT
license_files = LICENSE
platforms = "unix", "linux", "osx", "win32"
keywords=["python", "genius", "api-wrapper"]
homepage = "https://github.com/jjoeldaniel/genius.py"
repository = "https://github.com/jjoeldaniel/genius.py"
classifiers =
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Unix",
    "Operating System :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows"

[options]
packages = geniusdotpy
python_requires = >=3.7
install_requires = 
    beautifulsoup4>=4.11.1
    requests>=2.31.0
zip_safe = False